@@ -1,24 +1,10 @@
 package club.maxstats.weave;
 
-import club.maxstats.weave.remapping.NotchToMCPRemapper;
-import club.maxstats.weave.util.Constants;
-import club.maxstats.weave.util.Utils;
 import lombok.NonNull;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
-import org.gradle.internal.impldep.com.google.common.collect.ImmutableMap;
-import org.objectweb.asm.ClassReader;
-import org.objectweb.asm.ClassWriter;
-import org.objectweb.asm.commons.ClassRemapper;
-import org.objectweb.asm.commons.Remapper;
 
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.util.Enumeration;
-import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
-import java.util.jar.JarOutputStream;
+import java.util.Map;
 
 /**
  * TODO: Add description here.
@@ -38,9 +24,11 @@ public class WeavePlugin extends AbstractPlugin {
     @Override
     public void apply(@NonNull Project project) {
         /* Applying our default plugins. */
-        project.apply(ImmutableMap.of("plugin", "idea"));
-        project.apply(ImmutableMap.of("plugin", "eclipse"));
-        project.apply(ImmutableMap.of("plugin", "java"));
+        project.apply(Map.of("plugin", "idea"));
+        project.apply(Map.of("plugin", "eclipse"));
+        project.apply(Map.of("plugin", "java"));
+
+        super.apply(project);
     }
 
 }
